test/spec_vectors/try_table/ok/module_0.wat
(module (tag $e0 (export "e0")) (func (export "throw") (throw $e0)))