test/spec_vectors/try_table/fail/module_9.wat
(module (tag) (func (result exnref) (try_table (catch 0 0)) (unreachable)))